<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activities.roomtype.TabFragment3">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:background="@color/colorWhite"
        android:elevation="8dp">

        <TextView
            android:id="@+id/textViewTittle3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSecondary"
            android:fontFamily="@font/roboto"
            android:padding="2dp"
            android:text="@string/luxury_room"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/text3_area1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image3" />

        <Button
            android:id="@+id/buttonChooseRoomType3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bordered_button"
            android:text="@string/choose"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text3_area3" />

        <ImageView
            android:id="@+id/image3"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/textViewTittle3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/luxury_hotel_room"
            tools:src="@tools:sample/backgrounds/scenic" />

        <ImageView
            android:id="@+id/image3_OK1"
            android:layout_width="32dp"
            android:layout_height="32dp"

            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"

            app:layout_constraintBottom_toBottomOf="@id/text3_area1"
            app:layout_constraintEnd_toStartOf="@id/text3_area1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/text3_area1"
            app:srcCompat="@drawable/galochka"
            tools:src="@drawable/galochka" />

        <TextView
            android:id="@+id/text3_area1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center|start"
            android:text="@string/luxury_area"
            android:textAllCaps="false"
            android:textColor="@color/colorSecondary"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/text3_area2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image3_OK1"
            app:layout_constraintTop_toBottomOf="@+id/textViewTittle3" />

        <ImageView
            android:id="@+id/image3_OK2"
            android:layout_width="32dp"
            android:layout_height="32dp"

            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"

            app:layout_constraintBottom_toBottomOf="@id/text3_area2"
            app:layout_constraintEnd_toStartOf="@id/text3_area2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/text3_area2"
            app:srcCompat="@drawable/galochka"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/text3_area2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center|start"
            android:text="@string/luxury_furniture"
            android:textColor="@color/colorSecondary"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/text3_area3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image3_OK2"
            app:layout_constraintTop_toBottomOf="@id/text3_area1" />

        <ImageView
            android:id="@+id/image3_OK3"
            android:layout_width="32dp"
            android:layout_height="32dp"

            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"

            app:layout_constraintBottom_toBottomOf="@+id/text3_area3"
            app:layout_constraintEnd_toStartOf="@id/text3_area3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text3_area3"
            app:srcCompat="@drawable/galochka"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/text3_area3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center|start"
            android:text="@string/luxury_info"
            android:textColor="@color/colorSecondary"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/buttonChooseRoomType3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image3_OK3"
            app:layout_constraintTop_toBottomOf="@id/text3_area2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>